light template editor improve

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1339,6 +1339,10 @@ ul.root-ul {
 	}
 }
 
+.filter {
+	padding: 0px !important;
+}
+
 // Dashboard fixes
 .user-dashboard > .tabs > .tab-content > .tab-pane.active > .panel-card > .card {
 	background: #232323 !important;
@@ -1414,6 +1418,7 @@ ul.root-ul {
 		}
 	}
 }
+
 // Template editor works
 .tmpl-new > .new-menu.on {
 	background: @background-color !important;
