--- a/files/Theme/ThemeMondrian-Light/const.less
+++ b/files/Theme/ThemeMondrian-Light/const.less
@@ -32,11 +32,11 @@
 
 /* Panel */
 @panel-background-color: #f3f1ee;
-@panel-border-color: transparent;
+@panel-border-color: #c6c6c6;
 @panel-border-radius: 0rem;
 @panel-box-shadow: none;
 @panel-header-background-color: #f9f8f7;
-@panel-header-border-bottom-color: #C6C6C6;
+@panel-header-border-bottom-color: #c6c6c6;
 @panel-footer-background-color: #F3F1EE;
 @panel-footer-color: #474747;
 @panel-footer-border-top-color: #C6C6C6;
