cache & filters improve

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -333,14 +333,15 @@ form {
 }
 
 .cache img {
-    border: solid 0.25rem transparent;
-	transition: border 0.25s ease, transform 0.25s ease !important;
-	border-radius: 0.75rem !important;
+    border: solid 0.065rem transparent;
+	transition: all 0.33s ease !important;
+	border-radius: 0px !important;
 	
     &:hover {
         box-shadow: none !important;
-        border: solid 0.25rem rgba(0,0,0, 0.08);
-        transform: scale(1.05);
+        border-color: rgba(0,0,0, 0.08);
+        transform: scale(1.025);
+        background-color: rgba(0,0,0, 0.08) !important;
     }
 }
 
@@ -802,6 +803,12 @@ td.workkey {
 	background: @mazette-blue-03 !important;
 	border: solid 1px @mazette-blue-09 !important;
 	color: @mazette-blue-09 !important;
+}
+
+button > .badge {
+	top: -.75rem !important;
+	right: -.33rem !important;
+	z-index: 1;
 }
 
 .select2-results__option > .enum-item {
@@ -1339,8 +1346,15 @@ ul.root-ul {
 	}
 }
 
-.filter {
-	padding: 0px !important;
+// Filter specificities
+.badge.count.filter {
+	padding: .25rem .5rem !important;
+	margin-top: .25rem;
+}
+
+.list-filters .filter {
+	padding: .5rem .75rem !important;
+	margin-top: .25rem;
 }
 
 // Dashboard fixes
