--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -819,7 +819,7 @@ button > .badge {
 .card {
 	.card-header {
 		padding: 0.5rem 1rem !important;
-		border: solid 0.065rem @border-color !important;
+		// border: solid 0.065rem @border-color !important;
 		
 		.head > .list-filters > div.filter {
 			background: @layer1-color;
@@ -1137,6 +1137,19 @@ ul.root-ul {
 	.card-header {
 		background: @bg-website-color !important;
 	}
+}
+
+// Latest fixes
+.objform > .card > .card-body {
+	padding: 1.5rem !important;
+}
+
+.card {
+	margin-bottom: 1.5rem !important;
+}
+
+.objlinks .tab-content .card { // fix...
+	border: solid 0.065rem @border-color !important; 
 }
 
 // DARK THEMES SPECIFICITIES
