--- a/files/Theme/ThemeMondrian-Dark/const.less
+++ b/files/Theme/ThemeMondrian-Dark/const.less
@@ -30,7 +30,7 @@
 /* Panel */
 @panel-background-color: #171717;
 @panel-color: #F1F1F1;
-@panel-border-color: transparent;
+@panel-border-color: #5c5c5c;
 @panel-border-radius: 0rem;
 @panel-box-shadow: none;
 @panel-header-background-color: #171717;
