--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1354,11 +1354,7 @@ ul.root-ul {
 .ace_tooltip {
 	background: @bg-website-color !important;
 	max-height: 425px !important;
-	height: 425px !important;
-	
-	* {
-		color: @text-color !important;
-	}
+	color: color: @text-color !important;
 }
 
 // Filter specificities
@@ -1383,56 +1379,82 @@ ul.root-ul {
 /* TEMPLATE EDITOR QUICK REWORK */
 .tmpl-edit {
 	.dock-zone {
+		position: relative; // oof
 		margin-top: 0.625rem;
 		height: 1rem !important;
 		border: none !important;
 		border-radius: 5px;
+		z-index: 11;
 	}
 	div > .dock-zone.on { // increase specificity to override ...
 		border-color: transparent !important;
-		background-color: @mazette-yellow-06 !important;
+		background-color: @mazette-yellow-04 !important;
 	}
 	
-	.row {
-		.tmpl-bar {
-			border-radius: 0 !important;
-			background-color: @mazette-green-06 !important;
-		}
-		
-		.area {
-			.tmpl-bar {
-				border-radius: 0 !important;
-				background-color: @mazette-blue-06 !important;
-			}
-			
-			.field {
-				.tmpl-bar {
-					border-radius: 0 !important;
-					background-color: @mazette-black-06 !important;
-				}
-			}
-		}
+	.row > .tmpl-bar {
+		border-radius: 0 !important;
+		background-color: @mazette-green-07 !important;
+	}
+	.area > .tmpl-bar {
+		border-radius: 0 !important;
+		background-color: @mazette-blue-07 !important;
+	}	
+	.field > .tmpl-bar {
+		border-radius: 0 !important;
+		background-color: @mazette-black-07 !important;
 	}
 }
 
 .tmpl-desk.on {
 	.row {
 		padding: 4px !important;
-		border-color: @mazette-green-04 !important;
+		border-color: @mazette-green-03 !important;
+		
+		& > [class*="col-"]:not(:last-child) {
+			border-right-color: @mazette-green-03 !important;
+		}
 		
 		&:hover {
 			border-color: @mazette-green-07 !important;
 			box-shadow: none !important;
+			
+			& > [class*="col-"]:not(:last-child) {
+				border-right-color: @mazette-green-07 !important;
+			}
+			
+			&::before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				background-color: fade(@mazette-green-07, 3.33%);
+				z-index: 10;
+				pointer-events: none;
+			}
 		}
 	}
 	
 	.area {
 		padding: 4px !important;
-		border-color: @mazette-blue-04 !important;
+		border-color: @mazette-blue-03 !important;
 		
 		&:hover {
-			border-color: @mazette-blue-07 !important;
+			border-color: @mazette-blue-06 !important;
 			box-shadow: none !important;
+			
+			&::before {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				background-color: fade(@mazette-blue-06, 3.33%);
+				z-index: 10;
+				pointer-events: none;
+			}
 		}
 	}
 	
@@ -1444,6 +1466,8 @@ ul.root-ul {
 			border-color: @mazette-black-07 !important;
 			box-shadow: none !important;
 			background-color: @mazette-black-01 !important;
+			position: relative;
+			z-index: 11;
 		}
 	}
 }
