--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1354,7 +1354,7 @@ ul.root-ul {
 .ace_tooltip {
 	background: @bg-website-color !important;
 	max-height: 425px !important;
-	color: color: @text-color !important;
+	color: @text-color !important;
 }
 
 // Filter specificities
@@ -1436,7 +1436,7 @@ ul.root-ul {
 		}
 	}
 	
-	.area {
+	.area, .states-navbar {
 		padding: 4px !important;
 		border-color: @mazette-blue-03 !important;
 		
