color field preview fix 1

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -740,8 +740,9 @@ div.social.audit {
 	background-color: @background-color !important;
 }
 .btn-color-picker > div.preview {
-	left: -0.5rem !important;
+	left: -1.5rem !important;
 	width: 1rem !important;
+	height: 1.5rem !important;
 	border: solid 0.125rem @border-color;
 }
 
@@ -846,6 +847,7 @@ button > .badge {
 		background-color: darken(@background-color, 4%) !important;
 	}
 	.input-group-text {
+		z-index: 1;
 		border-left: solid 0.125rem @border-color;
 		&:hover {
 			background-color: darken(@background-color, 4%) !important;
