round color preview

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -739,10 +739,11 @@ div.social.audit {
 	background-color: @background-color !important;
 }
 .btn-color-picker > div.preview {
-	left: -1.5rem !important;
-	width: 1rem !important;
+	left: -2rem !important;
+	width: 1.5rem !important;
 	height: 1.5rem !important;
-	border: solid 0.125rem @border-color;
+	border: solid 0.065rem @border-color;
+	border-radius: 1rem;
 }
 
 .store-container {
