--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -519,10 +519,37 @@ form {
     	}
 	}
 }
- 
-div.monitor.docked ul.nav.nav-tabs {
-	padding: 8px 4px !important;
-	background-color: @layer2-color !important;	
+
+.split-separator {
+	background: @layer1-color;
+}
+
+.monitor.docked {
+	.tabs.tabs-underline {
+		ul.nav.nav-tabs {
+			padding: 8px 4px !important;
+			background: @background-color;
+			.nav-link.active {
+				color: @text-color;
+				background: @layer1-color;
+			}
+			.nav-item .nav-link {
+				color: @text-color;
+				background: @layer1-color;
+				&:hover {
+					background: lighten(@layer1-color, 5%);
+				}
+			}
+			
+		}
+		.tab-content .tab-pane.active {
+			background: @background-color;
+		}
+	}
+	
+	* {
+		box-shadow: none !important;
+	}
 }
 
 div.social.audit {
@@ -1390,20 +1417,24 @@ ul.root-ul {
 	}
 	div > .dock-zone.on { // increase specificity to override ...
 		border-color: transparent !important;
-		background-color: @mazette-yellow-04 !important;
+		background-color: @mazette-yellow-06 !important;
 	}
 	
 	.row > .tmpl-bar {
 		border-radius: 0 !important;
 		background-color: @mazette-green-07 !important;
 	}
-	.area > .tmpl-bar {
+	.area > .tmpl-bar, .states-navbar > .tmpl-bar {
 		border-radius: 0 !important;
 		background-color: @mazette-blue-07 !important;
 	}	
 	.field > .tmpl-bar {
 		border-radius: 0 !important;
+		color: @mazette-black-01 !important;
 		background-color: @mazette-black-07 !important;
+		* {
+			color: @mazette-black-01;
+		}
 	}
 }
 
