--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -517,9 +517,36 @@ form {
 	}
 }
  
-div.monitor.docked ul.nav.nav-tabs {
-	padding: 8px 4px !important;
-	background-color: @layer2-color !important;	
+.split-separator {
+	background: @layer1-color;
+}
+
+.monitor.docked {
+	.tabs.tabs-underline {
+		ul.nav.nav-tabs {
+			padding: 8px 4px !important;
+			background: @background-color;
+			.nav-link.active {
+				color: @text-color;
+				background: @bg-website-color;
+			}
+			.nav-item .nav-link {
+				color: @text-color;
+				background: @bg-website-color;
+				&:hover {
+					background: darken(@bg-website-color, 5%);
+				}
+			}
+			
+		}
+		.tab-content .tab-pane.active {
+			background: @background-color;
+		}
+	}
+	
+	* {
+		box-shadow: none !important;
+	}
 }
 
 div.social.audit {
@@ -1275,14 +1302,14 @@ ul.root-ul {
 	}
 	div > .dock-zone.on { // increase specificity to override ...
 		border-color: transparent !important;
-		background-color: @mazette-yellow-04 !important;
+		background-color: @mazette-yellow-06 !important;
 	}
 	
 	.row > .tmpl-bar {
 		border-radius: 0 !important;
 		background-color: @mazette-green-07 !important;
 	}
-	.area > .tmpl-bar {
+	.area > .tmpl-bar, .states-navbar > .tmpl-bar {
 		border-radius: 0 !important;
 		background-color: @mazette-blue-07 !important;
 	}	
@@ -1323,7 +1350,7 @@ ul.root-ul {
 		}
 	}
 	
-	.area {
+	.area, .states-navbar {
 		padding: 4px !important;
 		border-color: @mazette-blue-03 !important;
 		
