--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -479,6 +479,10 @@ form {
 	}
 }
 
+.module-delete {
+	background: @background-color !important;
+}
+
 #panel_Home_3 {
 	.view-item, .item-extern {
 		
