--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1,7 +1,7 @@
 /* Dark Color Palette (cf documentation) */
 @mazette-black-00:  #171717;
-@mazette-black-01:  #2E2E2E;
-@mazette-black-02:  #383838; // lighten 10%
+@mazette-black-01:  #2A2A2A; // #171717 lightened (~7.5%) - 10% was #2E2E2E
+@mazette-black-02:  #424242; // #2E2E2E lightened (~12%) - 10% was #383838
 @mazette-black-03:  #5C5C5C;
 @mazette-black-04:  #8B8B8B;
 @mazette-black-05:  #B9B9B9;
