tests on app custom logo

--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -767,6 +767,9 @@ div.social.audit {
 	width: 1rem !important;
 	border: solid 0.125rem @border-color;
 }
+.frame-wrapper {
+	box-shadow: none !important;
+}
 
 .store-container {
 	background-color: @background-color !important;
