--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -778,12 +778,31 @@ div.social.audit {
 .table.table-striped {
 	background-color: @background-color !important;
 }
-.btn-color-picker > div.preview {
-	left: -2rem !important;
-	width: 1.5rem !important;
-	height: 1.5rem !important;
-	border: solid 0.065rem @border-color;
-	border-radius: 1rem;
+// .btn-color-picker > div.preview {
+// 	width: 1.5rem !important;
+// 	height: 1.5rem !important;
+// 	border: solid 0.065rem @border-color;
+// 	border-radius: 1rem;
+// }
+
+.btn-color-picker {
+	position: relative;
+	width: 3rem;
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	> img {
+		border-left: solid .065rem @border-color;
+		padding-left: .15rem;
+	}
+	> .preview {
+		width: 1rem;
+		height: 1rem;
+		aspect-ratio: 1/1;
+		border: solid .065rem @border-color;
+		border-radius: 1rem;
+	}
 }
 
 .store-container {
@@ -1406,6 +1425,10 @@ ul.root-ul {
 		background: @layer1-color;
 		border-radius: 0 !important;
 	}
+}
+
+.frame-wrapper {
+	box-shadow: none !important;
 }
 
 .ace_tooltip {
