--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -356,6 +356,16 @@ form {
     padding: 1rem !important;
 }
 
+.table thead th {
+	background: @layer1-color;
+	color: darken(@text-color, 5%);
+	border-left: solid 0.065rem @border-color;
+}
+
+tr {
+	background: @background-color;
+}
+
 .table > thead > tr.head {
 	td, th {
 		padding-bottom: 0rem !important;
