--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1268,6 +1268,12 @@ ul.root-ul {
 				font-style: italic;
 			}
 		}
+		
+		&:hover {
+			div {
+				background-color: lighten(@layer1-color, 5%) !important;
+			}
+		}
 	}
 }
 
