--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -1260,6 +1260,11 @@ ul.root-ul {
 				font-style: italic;
 			}
 		}
+		&:hover {
+			div {
+				background-color: lighten(@layer1-color, 5%) !important;
+			}
+		}
 	}
 }
 
