--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -805,30 +805,26 @@ div.social.audit {
 .table.table-striped {
 	background-color: @background-color !important;
 }
-// .btn-color-picker > div.preview {
-// 	width: 1.5rem !important;
-// 	height: 1.5rem !important;
-// 	border: solid 0.065rem @border-color;
-// 	border-radius: 1rem;
-// }
 
 .btn-color-picker {
 	position: relative;
 	width: 3rem;
 	height: 100%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	> img {
 		border-left: solid .065rem @border-color;
 		padding-left: .15rem;
 	}
 	> .preview {
+		position: relative !important;
 		width: 1rem;
 		height: 1rem;
 		aspect-ratio: 1/1;
 		border: solid .065rem @border-color;
 		border-radius: 1rem;
+		margin-right: .25rem;
 	}
 }
 
@@ -1675,7 +1671,7 @@ ul.root-ul {
 }
 
 // Modeler quick fixes
-.docked-model {
+.docked-model, .popup-model {
 	color: @text-dark-color !important;
 	.palette .icon:hover {
 		color: @mazette-black-05 !important;
