--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -809,18 +809,20 @@ div.social.audit {
 	width: 3rem;
 	height: 100%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
 	> img {
 		border-left: solid .065rem @border-color;
 		padding-left: .15rem;
 	}
 	> .preview {
+		position: relative !important;
 		width: 1rem;
 		height: 1rem;
 		aspect-ratio: 1/1;
 		border: solid .065rem @border-color;
 		border-radius: 1rem;
+		margin-right: .25rem;
 	}
 }
 
@@ -1668,7 +1670,7 @@ ul.root-ul {
 }
 
 // Modeler quick fixes
-.docked-model {
+.docked-model, .popup-model {
 	color: @text-dark-color !important;
 	.palette .icon:hover {
 		color: @mazette-black-05 !important;
