--- a/files/Theme/ThemeMondrian-Light/addon.less
+++ b/files/Theme/ThemeMondrian-Light/addon.less
@@ -762,10 +762,26 @@ div.social.audit {
 .table.table-striped {
 	background-color: @background-color !important;
 }
-.btn-color-picker > div.preview {
-	left: -0.5rem !important;
-	width: 1rem !important;
-	border: solid 0.125rem @border-color;
+.btn-color-picker {
+	position: relative;
+	width: 3rem;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	> img {
+		border-left: solid .065rem @border-color;
+		padding-left: .15rem;
+	}
+	> .preview {
+		position: relative !important;
+		width: 1rem;
+		height: 1rem;
+		aspect-ratio: 1/1;
+		border: solid .065rem @border-color;
+		border-radius: 1rem;
+		margin-right: .25rem;
+	}
 }
 .frame-wrapper {
 	box-shadow: none !important;
