--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -1487,6 +1487,10 @@ ul.root-ul {
 	color: @text-color !important;
 }
 
+.ace_layer.ace_print-margin-layer > .ace_print-margin {
+	visibility: hidden !important;
+}
+
 // Filter specificities
 .badge.count.filter {
 	padding: .25rem .5rem !important;
@@ -1738,6 +1742,10 @@ tr.highlight td {
 	background: @mazette-blue-04 !important;
 }
 
+th.ctcol {
+	background: transparent !important;
+}
+
 .header .btn-shortcut.active, .header .btn-shortcut.active:focus {
 	background: @mazette-blue-06 !important;
 }
@@ -1798,6 +1806,14 @@ tr.highlight td {
 	}
 }
 
+.hjls {
+	background: white !important;
+}
+
 .db-access {
+	background: transparent !important;
+}
+
+.tox .tox-tbtn svg {
 	background: transparent !important;
 }
