Bunch of fixes (from daz insights)

--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -157,19 +157,35 @@ ul.sub-menu a.menu-sel::before {
 }
 
 .header .index { /* The one in the header only */
-    div.input-group.searchbox {
-        background-color: transparent !important;
+    // div.input-group.searchbox {
+    //     background-color: transparent !important;
 
-        input.form-control {
-            background-color: lighten(@background-color, 16%) !important;
-            color: @text-main-color !important;
-        }
-        button.btn {
-            background-color: lighten(@background-color, 32%) !important;
-            &:hover {
+    //     input.form-control {
+    //         background-color: lighten(@background-color, 16%) !important;
+    //         color: @text-main-color !important;
+    //     }
+    //     button.btn {
+    //         background-color: lighten(@background-color, 32%) !important;
+    //         &:hover {
+    //             color: @mazette-black-06 !important;
+    //         }
+    //     }
+    // }
+    border: solid 0.065rem @border-color;
+    
+    .searchbox {
+    	input {
+    		border: none !important;
+    		background-color: @mazette-black-02 !important;
+    	}
+    	
+    	button {
+    		background-color: @mazette-black-02 !important;
+    		border-left: solid 0.065rem @border-color;
+    		&:hover {
                 color: @mazette-black-06 !important;
             }
-        }
+    	}
     }
 }
 
@@ -767,6 +783,10 @@ div.social.audit {
 	background: @background-color;
 }
 
+.select2-selection__clear {
+	margin-left: .5rem;
+}
+
 .zoom-compact::before {
 	color: @text-main-color !important;
 }
@@ -957,6 +977,16 @@ button > .badge {
 .modal-body {
 	h3 {
 		background: @background-color !important;
+	}
+}
+
+.modal-content > .modal-header > button.btn-close {
+	color: white !important;
+	background-color: @border-color !important;
+	padding: .33rem !important;
+	
+	&:hover {
+		background-color: darken(@border-color, 25%) !important;
 	}
 }
 
@@ -1261,9 +1291,13 @@ ul.root-ul {
 }
 
 .git-history {
+	tr {
+		border: solid 0.065rem @border-color;
+	}
 	td {
+		border: solid 0.065rem @border-color;
 		div {
-			background: @layer1-color !important;
+			background: @background-color !important;
 			&:not(.mono) {
 				color: @text-color !important;
 			}
@@ -1276,8 +1310,9 @@ ul.root-ul {
 			}
 		}
 		&:hover {
+			background-color: @mazette-black-02 !important;
 			div {
-				background-color: lighten(@layer1-color, 5%) !important;
+				background-color: @mazette-black-02 !important;
 			}
 		}
 	}
@@ -1479,6 +1514,9 @@ ul.root-ul {
 
 .frame-wrapper {
 	box-shadow: none !important;
+	iframe {
+		background-color: #f3f3f3 !important;
+	}
 }
 
 .ace_tooltip {
@@ -1806,14 +1844,14 @@ th.ctcol {
 	}
 }
 
-.hjls {
-	background: white !important;
-}
-
 .db-access {
 	background: transparent !important;
 }
 
 .tox .tox-tbtn svg {
 	background: transparent !important;
+}
+
+div.hljs {
+	background-color: white !important;
 }
