--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -325,7 +325,7 @@ form {
 	.panel-list {
 		form {
 			.alert {
-				margin-top: 1rem !important;
+				margin: .75rem .75rem !important;
 			}
 		}
 	}
@@ -753,7 +753,7 @@ div.social.audit {
 		color: @text-main-color !important;
 	}
 	span.select2 > span.selection > span > span > div.enum-item {
-		color: @text-main-color !important;
+		color: @text-main-color;
 	}
 }
 
@@ -986,7 +986,7 @@ button > .badge {
 	padding: .33rem !important;
 	
 	&:hover {
-		background-color: darken(@border-color, 25%) !important;
+		background-color: lighten(@border-color, 25%) !important;
 	}
 }
 
@@ -1527,6 +1527,14 @@ ul.root-ul {
 
 .ace_layer.ace_print-margin-layer > .ace_print-margin {
 	visibility: hidden !important;
+}
+
+.ace_gutter-cell {
+	color: lightgray;
+}
+
+.ace_active-lin {
+	background-color: rgba(255, 255, 255, 0.1) !important;
 }
 
 // Filter specificities
