grid card dynamic bg now does override

--- a/files/Theme/ThemeMondrian-Dark/addon.less
+++ b/files/Theme/ThemeMondrian-Dark/addon.less
@@ -1100,7 +1100,7 @@ div.obj-summary {
 	
 	.obj-body {
 		.title {
-			background: @background-fade-color !important;
+			background: @background-fade-color; // here this has to stay overrideable by the dynamic colors...
 			border-radius: 0px !important;
 		}
 		.infos {
