--- a/files/Theme/ThemeMondrian-Darker/addon.less
+++ b/files/Theme/ThemeMondrian-Darker/addon.less
@@ -1080,7 +1080,7 @@ div.obj-summary {
 	
 	.obj-body {
 		.title {
-			background: @background-fade-color !important;
+			background: @background-fade-color;
 			border-radius: 0px !important;
 		}
 		.infos {
